added question generation and scoring to js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<div class="container">
 <!-- title -->
 <div class="row">
     <div class="col-md-2"></div>
@@ -33,63 +33,13 @@
 <div class="row">
     <div class="col-md-2"></div>
         <div class="col-md-8">
-            <div class="question">
-                <p>What is a group of kittens called?</p>
-                <form>
-                    <label>a kite</label>
-                    <input type="radio"> 
-                    <label>a nook</label>
-                    <input type="radio"> <br>
-                    <label>a kindle</label>
-                    <input type="radio">
-                    <label>a group</label>
-                    <input type="radio"> <br>
-                </form>
+            <div class="questions">
             </div>
         </div>
     <div class="col-md-2"></div>
 </div>
-
-<div class="row">
-    <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="question">
-                <p>How old was the oldest ever recorded cat?</p>
-                <form>
-                    <label>20 years old</label>
-                    <input type="radio"> 
-                    <label>18 years old</label>
-                    <input type="radio"> <br>
-                    <label>30 years old</label>
-                    <input type="radio">
-                    <label>26 years old</label>
-                    <input type="radio"> <br>
-                </form>
-            </div>
-        </div>
-    <div class="col-md-2"></div>
+<button class="my-button">Submit</button>
 </div>
-
-<div class="row">
-    <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="question">
-                <p>What is the most popular cat name in the United States?</p>
-                <form>
-                    <label>Luna</label>
-                    <input type="radio"> 
-                    <label>Oliver</label>
-                    <input type="radio"> <br>
-                    <label>Buttons</label>
-                    <input type="radio">
-                    <label>Fluffy</label>
-                    <input type="radio"> <br>
-                </form>
-            </div>
-        </div>
-    <div class="col-md-2"></div>
-</div>
-
 </body>
 
 </html>
