--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
 <div class="row">
     <div class="col-md-2"></div>
         <div class="col-md-8">
-            <div class="questions">
-            </div>
+            <div class="questions"> </div>
+    
+            <button class="my-button"> Submit </button>
+            
         </div>
     <div class="col-md-2"></div>
 </div>
-<button class="my-button">Submit</button>
 </div>
+
 </body>
 
 </html>
